Add copyright headers; improve eslint config

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,3 +10,14 @@ parserOptions:
   sourceType: module
 rules:
   linebreak-style: 0
+  spaced-comment:
+    - 2
+    - always
+    - exceptions: *
+  no-console:
+    - error
+    - allow:
+        - info
+        - warn
+        - error
+
